--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
@@ -153,7 +153,7 @@
       <div class="pricing-column col-lg-4 col-md-6">
         <div class="card ">
           <div class="card-header">
-            <h3>Chihuahua</h3>
+            <h3 class="section-head">Chihuahua</h3>
           </div>
           <div class="card-body">
             <h2 class="price-text">Free</h2>
@@ -167,7 +167,7 @@
       <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
-            <h3>Labrador</h3>
+            <h3 class="section-head">Labrador</h3>
           </div>
           <div class="card-body">
             <h2 class="price-text">$49 / mo</h2>
@@ -181,7 +181,7 @@
       <div class="pricing-column col-lg-4 col-md-12">
         <div class="card">
           <div class="card-header ">
-            <h3>Mastiff</h3>
+            <h3 class="section-head">Mastiff</h3>
           </div>
           <div class="card-body">
             <h2 class="price-text">$99 / mo</h2>
