--- a/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
+++ b/bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/TinDog-Start-master/index.html
@@ -76,7 +76,7 @@
   <!-- Features -->
 
   <section id="features">
-
+<div class="container-fluid">
     <div class="row">
       <div class="feature-box col-lg-4 ">
         <i class="fa-solid fa-circle-check circle-check fa-4x"></i>
@@ -96,6 +96,7 @@
         <p>Find the love of your dog's life or your money back.</p>
       </div>
     </div>
+  </div>
   </section>
 
 
@@ -105,12 +106,12 @@
 
     <div id="testimonial-carousel" class="carousel slide" data-bs-ride="false" data-interval="1000" data.pause="hover">
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item active container-fluid">
           <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of
             their life. I think.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
